// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ForgotPassword /> Component should match component snapshot 1`] = `
<div>
  <div
    className="container"
    style={
      Object {
        "paddingTop": "150px",
      }
    }
  >
    <h3
      className="center"
    >
      Event Manager
    </h3>
    <div
      className="card loginCard"
      style={
        Object {
          "width": "30rem",
        }
      }
    >
      <div
        className="card-header"
      >
        <h3>
          Password Reset
        </h3>
      </div>
      <div
        className="card-body"
      >
        <div
          className="cont card-body"
        >
          <form
            className="centerform"
            onSubmit={[Function]}
          >
            <div
              className="form-group"
            >
              <label
                htmlFor="2"
              >
                Email address
              </label>
              <input
                className="form-control form-control-lg"
                name="email"
                onChange={[Function]}
                placeholder="Vaild Email"
                required={true}
                type="email"
                value=""
              />
            </div>
            <div
              className="text-center"
            >
              <button
                className="btn btn-outline-dark"
                type="submit"
              >
                Email me a recovery link
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ForgotPassword /> Component should render initial layout of ForgotPassword 1`] = `
Array [
  <div>
    <div
      className="container"
      style={
        Object {
          "paddingTop": "150px",
        }
      }
    >
      <h3
        className="center"
      >
        Event Manager
      </h3>
      <div
        className="card loginCard"
        style={
          Object {
            "width": "30rem",
          }
        }
      >
        <div
          className="card-header"
        >
          <h3>
            Password Reset
          </h3>
        </div>
        <div
          className="card-body"
        >
          <div
            className="cont card-body"
          >
            <form
              className="centerform"
              onSubmit={[Function]}
            >
              <TextField
                label="Email address"
                name="email"
                onChange={[Function]}
                placeholder="Vaild Email"
                type="email"
                value=""
              />
              <div
                className="text-center"
              >
                <button
                  className="btn btn-outline-dark"
                  type="submit"
                >
                  Email me a recovery link
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
